# rules_rust_2783_repro

./: Cargo.toml  MODULE.bazel  README.md
.devcontainer/: Dockerfile  devcontainer.json
mycrate/: BUILD.bazel  Cargo.toml
mycrate-proc-macro/: BUILD.bazel  Cargo.toml
mycrate-proc-macro/src/: lib.rs
mycrate/src/: lib.rs
